优化封面和音乐tag, 添加测试代码, 添加导入和导出所有音乐excel表格, 修复一些bug